[project]
name = "bach-qr_code_generator20"
version = "1.0.0"
description = "RapidAPI: hydrone/qr-code-generator20"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bach_qr_code_generator20 = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/bachstudio/bach-qr_code_generator20"
Repository = "https://github.com/bachstudio/bach-qr_code_generator20"
Documentation = "https://github.com/bachstudio/bach-qr_code_generator20#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
path = "server.py"
pattern = '__version__ = "(?P<version>[^"]+)"'