[project]
name = "bach-qr_code_generator20"
version = "1.0.0"
description = "RapidAPI: hydrone/qr-code-generator20"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "bachstudio"}
]
keywords = ["mcp", "api", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bach_qr_code_generator20 = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/bachstudio/bach-qr_code_generator20"
Repository = "https://github.com/bachstudio/bach-qr_code_generator20"
"Bug Tracker" = "https://github.com/bachstudio/bach-qr_code_generator20/issues"
Documentation = "https://github.com/bachstudio/bach-qr_code_generator20#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
artifacts = ["openapi.json"]

[tool.hatch.build.targets.sdist]
include = [
    "server.py",
    "openapi.json",
    "README.md",
    "LICENSE",
    "__init__.py",
]

[tool.hatch.version]
path = "server.py"
pattern = '__version__ = "(?P<version>[^"]+)"'